@@ -15,6 +15,18 @@ if exist "%COMMON_CONF%" (
 )
 goto :eof
 
+:setEnhancedSecurityManager
+    "%JAVA%" -Djava.security.manager=allow -version >nul 2>&1 && (set ENHANCED_SM=true) || (set ENHANCED_SM=false)
+goto :eof
+
+:setSecurityManagerDefault
+  call :setEnhancedSecurityManager
+  if "!ENHANCED_SM!" == "true" (
+    rem Needed to be able to install Security Manager dynamically since JDK18
+    set "SECURITY_MANAGER_CONFIG_OPTION=-Djava.security.manager=allow"
+  )
+goto:eof
+
 :setModularJdk
     "%JAVA%" --add-modules=java.se -version >nul 2>&1 && (set MODULAR_JDK=true) || (set MODULAR_JDK=false)
 goto :eof
@@ -36,10 +48,14 @@ goto :eof
       set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
       rem Needed by JBoss Marshalling
       set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.base/java.io=ALL-UNNAMED"
+      rem Needed for marshalling of proxies
+      set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
       rem Needed by WildFly Security Manager
       set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.base/java.security=ALL-UNNAMED"
-      rem Needed for marshalling of enum maps
+      rem Needed for marshalling of collections
       set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.base/java.util=ALL-UNNAMED"
+      rem Needed for marshalling of concurrent collections
+      set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
       rem EE integration with sar mbeans requires deep reflection in javax.management
       set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-opens=java.management/javax.management=ALL-UNNAMED"
       rem InitialContext proxy generation requires deep reflection in javax.naming
