@@ -12,6 +12,18 @@ if [ -r "$COMMON_CONF" ]; then
   . "$COMMON_CONF"
 fi
 
+setEnhancedSecurityManager() {
+  "$JAVA" -Djava.security.manager=allow -version > /dev/null 2>&1 && ENHANCED_SM=true || ENHANCED_SM=false
+}
+
+setSecurityManagerDefault() {
+  setEnhancedSecurityManager
+  if [ "$ENHANCED_SM" = "true" ]; then
+    # Needed to be able to install Security Manager dynamically since JDK18
+    SECURITY_MANAGER_CONFIG_OPTION="-Djava.security.manager=allow"
+  fi
+}
+
 setModularJdk() {
   "$JAVA" --add-modules=java.se -version > /dev/null 2>&1 && MODULAR_JDK=true || MODULAR_JDK=false
 }
@@ -32,12 +44,16 @@ setDefaultModularJvmOptions() {
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.lang=ALL-UNNAMED"
       # Needed by the MicroProfile REST Client subsystem
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+      # Needed for marshalling of proxies
+      DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
       # Needed by JBoss Marshalling
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.io=ALL-UNNAMED"
       # Needed by WildFly Security Manager
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.security=ALL-UNNAMED"
-      # Needed for marshalling of enum maps
+      # Needed for marshalling of collections
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.util=ALL-UNNAMED"
+      # Needed for marshalling of concurrent collections
+      DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
       # EE integration with sar mbeans requires deep reflection in javax.management
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.management/javax.management=ALL-UNNAMED"
       # InitialContext proxy generation requires deep reflection in javax.naming
